# rust-graphql-api

./: .env  Cargo.toml
migrations/2019-08-13-122117_create_users/: up.sql
migrations/2019-08-21-154337_create_car/: up.sql
migrations/2019-08-23-080804_create_car_user/: down.sql  up.sql
src/: db.rs  graphql.rs  jwt.rs  lib.rs  main.rs  models.rs  schema.rs  server.rs
src/graphql/: mutations.rs  queries.rs
