[package]
name = "rydesapi"
version = "0.1.0"
authors = ["Ibrahim <ibrahim.alh94@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.2"
juniper = "0.13.1"
juniper_rocket = "0.4.1"
diesel = {version = "1.4.6", features = ["postgres", "r2d2", "chrono"] }
dotenv = "0.14.1"
bcrypt = "0.5.0"
jsonwebtoken = "5.0.1"
serde = { version = "1.0.98", features = ["derive"] }
serde_json = "1.0.40"
chrono = "0.4"
 